--- a/index.html
+++ b/index.html
@@ -183,25 +183,25 @@
                         <div class="progress">
                             <h3>Web Design</h3>
                             <div class="bar">
-                                <span data-percentage="80%"></span>
+                                <span data-percentage="90%"></span>
                             </div>
                         </div>
                         <div class="progress">
                             <h3>Development</h3>
                             <div class="bar">
-                                <span data-percentage="60%"></span>
+                                <span data-percentage="90%"></span>
                             </div>
                         </div>
                         <div class="progress">
                             <h3>Branding</h3>
                             <div class="bar">
-                                <span data-percentage="40%"></span>
+                                <span data-percentage="85%"></span>
                             </div>
                         </div>
                         <div class="progress">
                             <h3>Code</h3>
                             <div class="bar">
-                                <span data-percentage="75%"></span>
+                                <span data-percentage="95%"></span>
                             </div>
                         </div>
                     </div>
@@ -478,23 +478,23 @@
                 <button type="button" class="control active" data-filter="all">
                     All
                 </button>
-                <button type="button" class="control" data-toggle=".project">
+                <button type="button" class="control" data-toggle="project">
                     project
                 </button>
-                <button type="button" class="control" data-toggle=".design">
+                <button type="button" class="control" data-toggle="design">
                     design
                 </button>
                 <button
                     type="button"
                     class="control"
-                    data-toggle=".photography"
+                    data-toggle="photography"
                 >
                     photography
                 </button>
                 <button
                     type="button"
                     class="control"
-                    data-toggle=".development"
+                    data-toggle="development"
                 >
                     development
                 </button>
@@ -925,13 +925,7 @@
         </footer>
         <!-- End footer -->
         <!-- Start Script Files -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"
-            integrity="sha512-nKZDK+ztK6Ug+2B6DZx+QtgeyAmo9YThZob8O3xgjqhw2IVQdAITFasl/jqbyDwclMkLXFOZRiytnUrXk/PM6A=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
-        <script src="./JS/mixitup.js"></script>
+        <script src="./JS/filter.js"></script>
         <script src="./JS/main.js"></script>
         <!-- End Script Files -->
     </body>
